Bug 152695 - Plasma::Icon does not (re)size properly
Summary: Plasma::Icon does not (re)size properly
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 153971 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-22 11:10 UTC by Joseph Wenninger
Modified: 2007-12-18 17:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph Wenninger 2007-11-22 11:10:48 UTC
Version:            (using KDE KDE 3.96.0)
Installed from:    Unspecified Linux
OS:                Linux

After finishing the resize operation on the Lock/Logout applet it jumps back to the initial size
Comment 1 Jason Stubbs 2007-12-08 15:02:09 UTC
Resizing works here. Is this still an issue?
Comment 2 Marco Martin 2007-12-08 15:46:42 UTC
it did that some time ago, but now it can be resized and it saves the size correctly.
it still display a only a little piece of the icon and the icons are never resized (only the applet border) but it is another story and an old problem of the icon widget, this specific bug i think it could be closed
Comment 3 Jason Stubbs 2007-12-08 15:57:38 UTC
There's no other bug open for the icon size issue, so may as well leave this one open for that.
Comment 4 Aaron J. Seigo 2007-12-08 22:13:55 UTC
well, leave it open but at least change the name so we know what it's really about =)
Comment 5 Jason Stubbs 2007-12-13 16:18:51 UTC
*** Bug 153971 has been marked as a duplicate of this bug. ***
Comment 6 Jason Stubbs 2007-12-15 11:07:29 UTC
SVN commit 748748 by jstubbs:

Moved adding of the icons to the layout from paintWidget() into the
constructor, which fixes the layout when the applet is created.
Also removed all the dead code which has made it a lot easier to read.

CCBUG: 152695


 M  +20 -72    lockout.cpp  
 M  +2 -31     lockout.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=748748
Comment 7 Marco Martin 2007-12-18 17:56:55 UTC
SVN commit 750084 by mart:

Now icons can be resized

BUG: 152695

 M  +22 -6     icon.cpp  
 M  +0 -2      icon.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=750084