Now icons can be resized

BUG: 152695

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=750084